<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background_color"
    tools:context="com.example.android.myapplication.BusinessActivity">

    <!--- Store picture -->
    <ImageView
        android:id="@+id/photo_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/openHours_textview"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/duplirex_guin" />

    <!--- Store name -->
    <TextView
        android:id="@+id/store_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:fontFamily="serif-monospace "
        android:text="@string/store_name"
        android:textColor="@color/text_title"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

    <!--- Phone contact-->
    <TextView
        android:id="@+id/phone_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/store_name_textview"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="8dp"
        android:fontFamily="serif-monospace "
        android:text="@string/phone_number"
        android:textColor="@color/text_contact"
        android:textSize="@dimen/text_contact" />

    <!--- Email contact-->
    <TextView
        android:id="@+id/email_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_textview"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:fontFamily="serif-monospace "
        android:text="@string/email_name"
        android:textColor="@color/text_contact"
        android:textSize="@dimen/text_contact" />

    <!--- Description of business -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/photo_imageview"
        android:layout_below="@+id/email_textview"
        android:background="@color/text_background_color"
        android:fontFamily="serif-monospace "
        android:gravity="left"
        android:padding="@dimen/padding"
        android:text="@string/description"
        android:textColor="@color/text_description"
        android:textSize="@dimen/text_description" />

    <!--- Open Hours description -->
    <TextView
        android:id="@+id/openHours_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/text_background_color"
        android:fontFamily="serif-monospace "
        android:padding="@dimen/padding"
        android:text="@string/open_hours"
        android:textColor="@color/text_description"
        android:textSize="@dimen/text_description" />


</RelativeLayout>
